--- a/package.json
+++ b/package.json
@@ -3,13 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@patternfly/react-component-groups": "file:../react-component-groups/packages/module",
+    "@testing-library/jest-dom":"5.16.5",
+    "@testing-library/react":"^12.1.5",
+    "@testing-library/user-event": "13.5.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
+    "react-dom": "^17.0.0",
+    "react-router-dom": "^6.3.0",
+    "react-router": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react": "^17.0.0",
     "web-vitals": "^2.1.4"
+  },
+  "peerDependencies": {
+    "react": "^16.8 || ^17 || ^18",
+    "react-dom": "^16.8 || ^17 || ^18"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
